# 3DCG-2023

raytracer/raytracer/: CMakeLists.txt  Catch.h  app.cpp  command-line-parser.cpp  easylogging++.cc  easylogging++.h  logging.cpp  raytracer.vcxproj  raytracer.vcxproj.filters
raytracer/raytracer/animation/: interval-animation.h
raytracer/raytracer/cameras/: cameras.h  depth-of-field-perspective-camera.cpp  depth-of-field-perspective-camera.h
raytracer/raytracer/lights/: directional-light.cpp  directional-light.h  lights.h
raytracer/raytracer/materials/: composition-material.cpp  composition-material.h  material-properties.cpp  material-properties.h  materials.h  pattern-material.cpp  pattern-material.h
raytracer/raytracer/math/: point.h  rectangle2d.cpp  rectangle2d.h  transformation2d.cpp  transformation2d.h  transformation3d.cpp  transformation3d.h  vector.h
raytracer/raytracer/patterns/: constant-pattern.cpp  constant-pattern.h  lambda-pattern.cpp  lambda-pattern.h  pattern-tiling.cpp  pattern-tiling.h  pattern-transformations.cpp  pattern-transformations.h  pattern.h  patterns.h  xsplit-pattern.cpp  xsplit-pattern.h  ysplit-pattern.cpp  ysplit-pattern.h
raytracer/raytracer/performance/: performance.cpp  performance.h
raytracer/raytracer/pipeline/: motion-blur.cpp  motion-blur.h  pipelines.h  studio.cpp  studio.h
raytracer/raytracer/primitives/: bbacc.cpp  bbacc.h  csg-union-primitive.cpp  csg-union-primitive.h  plane-primitive.cpp  plane-primitive.h  primitives.h  transformer-primitive.cpp  transformer-primitive.h  triangle-primitive.cpp  (+3 more)
(+126 files in other folders)
